--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <base href="/">
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
@@ -22,6 +23,7 @@
         <script src="../../node_modules/systemjs/dist/system.src.js"></script>
         <script src="../../node_modules/rxjs/bundles/Rx.js"></script>
         <script src="../../node_modules/angular2/bundles/angular2.dev.js"></script>
+        <script src="../../node_modules/angular2/bundles/router.dev.js"></script>
 
         <script>
             System.config({
