Finish client gulp tasks, fix linter errors

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -18,23 +18,23 @@
         <script src="vendor/es6-shim/es6-shim.min.js"></script>
         <script src="vendor/systemjs/dist/system-polyfills.js"></script>
         <script src="vendor/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
-
         <script src="vendor/angular2/bundles/angular2-polyfills.js"></script>
         <script src="vendor/systemjs/dist/system.src.js"></script>
         <script src="vendor/rxjs/bundles/Rx.js"></script>
+
         <script src="vendor/angular2/bundles/angular2.dev.js"></script>
         <script src="vendor/angular2/bundles/router.dev.js"></script>
 
         <script>
             System.config({
                 packages: {
-                    client: {
+                    app: {
                         format: 'register',
                         defaultExtension: 'js'
                     }
                 }
             });
-            System.import('client/main')
+            System.import('main.js')
                     .then(null, console.error.bind(console));
         </script>
     </body>
