--- a/src/client/index.html
+++ b/src/client/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <meta name="description" content="A twitch bot providing IRC based assistance">
 
-        <title>hello twitchr</title>
+        <title>Welcome! - twitchr</title>
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
         <link rel="stylesheet" href="assets/main.css">
