--- a/src/client/index.html
+++ b/src/client/index.html
@@ -4,12 +4,12 @@
         <base href="/">
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="A twitch bot providing IRC based assistance">
 
         <title>Welcome! - twitchr</title>
 
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+        <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="assets/main.css">
     </head>
     <body>
