--- a/src/client/index.html
+++ b/src/client/index.html
@@ -10,33 +10,20 @@
         <title>Welcome! - twitchr</title>
 
         <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="assets/main.css">
+        <link rel="stylesheet" href="assets/css/style.css">
+
+        <script src="vendor/core-js/client/shim.min.js"></script>
+
+        <script src="vendor/zone.js/dist/zone.min.js"></script>
+        <script src="vendor/reflect-metadata/Reflect.js"></script>
+        <script src="vendor/systemjs/dist/system.js"></script>
+
+        <script src="system.config.js" inline></script>
+        <script>
+            System.import('app').catch(function(err) { console.error(err); });
+        </script>
     </head>
     <body>
         <twitchr-app>Loading...</twitchr-app>
-
-        <script src="vendor/es6-shim/es6-shim.min.js"></script>
-        <script src="vendor/systemjs/dist/system-polyfills.js"></script>
-        <script src="vendor/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
-        <script src="vendor/angular2/bundles/angular2-polyfills.js"></script>
-        <script src="vendor/systemjs/dist/system.src.js"></script>
-        <script src="vendor/rxjs/bundles/Rx.js"></script>
-
-        <script src="vendor/angular2/bundles/angular2.dev.js"></script>
-        <script src="vendor/angular2/bundles/http.dev.js"></script>
-        <script src="vendor/angular2/bundles/router.dev.js"></script>
-
-        <script>
-            System.config({
-                packages: {
-                    app: {
-                        format: 'register',
-                        defaultExtension: 'js'
-                    }
-                }
-            });
-            System.import('main.js')
-                    .then(null, console.error.bind(console));
-        </script>
     </body>
 </html>
