--- a/src/client/index.html
+++ b/src/client/index.html
@@ -7,10 +7,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="A twitch bot providing IRC based assistance">
 
-        <title>Welcome! - twitchr</title>
+        <title>twitchr - Twitch Bot as a Service</title>
 
         <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="css/main.css">
 
         <script src="vendor/core-js/client/shim.min.js"></script>
 
@@ -18,7 +18,7 @@
         <script src="vendor/reflect-metadata/Reflect.js"></script>
         <script src="vendor/systemjs/dist/system.js"></script>
 
-        <script src="system.config.js" inline></script>
+        <script src="systemjs.config.js" inline></script>
         <script>
             System.import('app').catch(function(err) { console.error(err); });
         </script>
