--- a/src/client/index.html
+++ b/src/client/index.html
@@ -18,6 +18,8 @@
         <script src="vendor/reflect-metadata/Reflect.js"></script>
         <script src="vendor/systemjs/dist/system.js"></script>
 
+        <script src="vendor/rxjs/bundles/Rx.min.js"></script>
+
         <script src="systemjs.config.js" inline></script>
         <script>
             System.import('app').catch(function(err) { console.error(err); });
