--- a/src/client/index.html
+++ b/src/client/index.html
@@ -9,6 +9,7 @@
 
         <title>twitchr - Twitch Bot as a Service</title>
 
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
         <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/main.css">
 
